plugins {
    id 'application'
}

group = 'org.kjy5'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

application {
    mainClass = 'org.kjy5.Main'
    
    // Enable preview features.
    applicationDefaultJvmArgs = ['--enable-preview']
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    
    // GumTree Diff + JavaParser support.
    implementation 'com.github.gumtreediff:client:4.0.0-beta2'
    implementation 'com.github.gumtreediff:core:4.0.0-beta2'
    implementation 'com.github.gumtreediff:gen.javaparser:4.0.0-beta2'
}

test {
    useJUnitPlatform()
}

// Configuration for Javac-parse.
run {
    args = ['9']
}
compileJava {
    // Enable preview features.
    options.compilerArgs += '--enable-preview'   
    sourceCompatibility = '21'
    targetCompatibility = '21'
}
compileTestJava {
    // Enable preview features.
    options.compilerArgs += '--enable-preview'   
    sourceCompatibility = '21'
    targetCompatibility = '21'
}
javadoc {
    options {
    }
}
